added price to menu, added sort by to menu categories, removed overflow on body

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
   <title>Brodys Burgers</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+
+  <meta name="description" content="Check out our epic beer selection and the best burgers in San Diego - 12930 Campo Rd Jamul, CA."/>
+  <meta property=”og:title” content="Brody's Burgers & Beer" />
+  <meta property=”og:type” content="website" />
+  <meta property="og:description" content="Check out our epic beer selection and the best burgers in San Diego - 12930 Campo Rd Jamul, CA."/>
+  <meta property="og:url" content="https://brodysburgersandbeer.com/" />
+  <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/brodys-192703.appspot.com/o/site-images%2Fbrodys-logo.png?alt=media&token=918f5aff-be8f-4140-9df2-46bf7caa4656" />
+  <meta property="og:image:secure_url" content="https://firebasestorage.googleapis.com/v0/b/brodys-192703.appspot.com/o/site-images%2Fbrodys-logo.png?alt=media&token=918f5aff-be8f-4140-9df2-46bf7caa4656" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="400" />
+
+  <meta name=”twitter:card” content="product" />
+  <meta name=”twitter:title” content="Brody's Burgers & Beer" />
+  <meta name=”twitter:description” content="Check out our epic beer selection and the best burgers in San Diego - 12930 Campo Rd Jamul, CA." />
+  <meta name=”twitter:image” content="https://firebasestorage.googleapis.com/v0/b/brodys-192703.appspot.com/o/site-images%2Fbrodys-logo.png?alt=media&token=918f5aff-be8f-4140-9df2-46bf7caa4656" />
+
+
   <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
@@ -19,6 +37,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
   <link rel="manifest" href="./assets/favicon/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
